crates/snapshot-tests/tests/snapshots/parser__bad_table_names__empty.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[Wanted]: expected a table key, found a right bracket
  ┌─ empty:1:2
  │
1 │ []
  │  ^ expected a table key
